# tba-v3-rust

./: .gitignore  Cargo.toml  README.md  apis-config.yml  models-config.yml  models.patch  rebuild-models.sh
lib-models/: Cargo.toml
lib-models/docs/: ApiStatus.md  ApiStatusAppVersion.md  Award.md  AwardRecipient.md  DistrictList.md  DistrictRanking.md  DistrictRankingEventPoints.md  EliminationAlliance.md  EliminationAllianceBackup.md  EliminationAllianceStatus.md  Event.md  EventDistrictPoints.md  EventDistrictPointsPoints.md  EventDistrictPointsTiebreakers.md  EventInsights.md  EventInsights2016.md  EventInsights2017.md  EventInsights2018.md  EventOpRs.md  EventRanking.md  EventRankingExtraStatsInfo.md  EventRankingRankings.md  EventRankingSortOrderInfo.md  EventSimple.md  MatchAlliance.md  MatchScoreBreakdown2015.md  MatchScoreBreakdown2015Alliance.md  MatchScoreBreakdown2016.md  MatchScoreBreakdown2016Alliance.md  MatchScoreBreakdown2017.md  MatchScoreBreakdown2017Alliance.md  MatchScoreBreakdown2018.md  MatchScoreBreakdown2018Alliance.md  MatchScoreBreakdown2019.md  MatchScoreBreakdown2019Alliance.md  MatchScoreBreakdown2020.md  MatchScoreBreakdown2020Alliance.md  MatchSimple.md  MatchSimpleAlliances.md  MatchTimeseries2018.md  (+18 more)
lib-models/src/models/: api_status.rs  api_status_app_version.rs  award.rs  award_recipient.rs  district_list.rs  district_ranking.rs  district_ranking_event_points.rs  elimination_alliance.rs  elimination_alliance_backup.rs  elimination_alliance_status.rs  event.rs  event_district_points.rs  event_district_points_points.rs  event_op_rs.rs  (+45 more)
(+16 files in other folders)
