[package]
name = "tba-v3"
version = "0.1.0"
authors = ["Wes <wesjordansemailaddress@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
reqwest = { version = "0.10.4", features = ["json"] }
serde = "1.0.106"
serde_json = "1.0.51"
url = "2.1.1"

tba-v3-models = {path = "lib-models"}

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }

[workspace]
members = ["lib-models"]